--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>gulp配置</title>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
     一些超级简单的配置.
+<script src="./js/index.js"></script>
 </body>
 </html>
